--- a/src/components/OldProductCard/OldProductCardInfo.less
+++ b/src/components/OldProductCard/OldProductCardInfo.less
@@ -142,7 +142,7 @@
                 vertical-align: bottom;
                 width: 38px;
                 height: 18px;
-                background: url(../../docIcons/infinity-bold.svg) 0 50% no-repeat;
+                background: url(../../icons/Basic/32/Infinity_32.svg) 0 50% no-repeat;
                 background-size: 100% auto;
             }
         }
